--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,20 @@
 	<groupId>com.codingame.game</groupId>
 	<artifactId>tictactoe</artifactId>
 	<version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>15</source>
+          <target>15</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-	<properties>
+  <properties>
         <gamengine.version>3.4.2</gamengine.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
