--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.codingame.game</groupId>
-	<artifactId>tictactoe</artifactId>
+	<artifactId>painting</artifactId>
 	<version>1.0-SNAPSHOT</version>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>15</source>
-          <target>15</target>
-        </configuration>
       </plugin>
     </plugins>
   </build>
