--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
 			<artifactId>runner</artifactId>
 			<version>${gamengine.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.codingame.gameengine</groupId>
+			<artifactId>module-tooltip</artifactId>
+			<version>${gamengine.version}</version>
+		</dependency>
 	</dependencies>
 </project>
