--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   </build>
 
   <properties>
-        <gamengine.version>3.4.2</gamengine.version>
+        <gamengine.version>3.15.2</gamengine.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
@@ -41,7 +41,12 @@
 		<dependency>
 			<groupId>com.codingame.gameengine</groupId>
 			<artifactId>module-tooltip</artifactId>
-			<version>${gamengine.version}</version>
+			<version>3.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.codingame.gameengine</groupId>
+			<artifactId>module-endscreen</artifactId>
+			<version>4.0.2</version>
 		</dependency>
 	</dependencies>
 </project>
